Implemented bookmark endpoints
